<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PT Evaluation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">PT Log In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_username_password">Username or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_form_list">Forms</string>
    <string name="title_form_detail">Form Detail</string>
    <string name="title_section1">Client Profile</string>
    <string name="title_section2">Per-visit Evaluation</string>
    <string name="title_section3">Quarterly Assessment Evaluation</string>  
    <string name="title_tab1">Per-visit Form</string>
    <string name="title_tab2">Quarterly Assessment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="splash_desc">Splash Screen</string>
    <string name="action_view">View</string>

    <!-- Colors -->
    <color name="white">#F2F2F2</color>
    <color name="black">#333333</color>
    <color name="purewhite">#FFFFFF</color>
    <color name="gray">#DBDBDB</color>
    <color name="darkgray">#8B8B8B</color>
    <color name="teal">#226D4C</color>
    <color name="red">#FF0000</color>
    <color name="blue">#4A708B</color>
    <color name="lightblue1">#077ea7</color>
    <color name="lightblue2">#0099CC</color>
    <color name="lightblue3">#3faaf4</color>
    <color name="orange">#fb9a24</color>
    <color name="darkorange">#A65200</color>
    <color name="lightorange">#F19132</color>
    
    <string name="title_activity_display_client">Client List</string>
    <string name="action_sort">Sort</string>
    <string name="action_search">Search</string>
    <string name="action_new">Add</string>
    <string name="action_last_name_az">Last name A-z</string>
    <string name="action_first_name_az">First name A-z</string>
    <string name="action_last_name_za">Last name Z-a</string>
    <string name="action_first_name_za">First name Z-a</string>
    <string name="action_info_and_eval">Evaluation</string>
    <string name="add_client">Add Client</string>
    <string name="cancel">Cancel</string>
    <string name="action_home">Home</string>
    <string name="title_activity_manager">Manager</string>
    <string name="eval_client">Evaluate</string>
    <string name="title_activity_view_form">View Form &amp; Give Feedback</string>
    <string name="action_back">Back</string>
    <string name="title_activity_list_form">ListFormActivity</string>

</resources>
