<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ptevalform.DisplayClientActivity" >

    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          app:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_sort"
          android:icon="@drawable/ic_action_shuffle"
          android:title="@string/action_sort"
          app:showAsAction="ifRoom" >
        
        <menu>  
            <item android:id="@+id/action_last_name_az"  
                  android:icon="@android:drawable/ic_menu_sort_alphabetically"  
                  android:title="@string/action_last_name_az" 
                  />  
            <item android:id="@+id/action_first_name_az"  
                  android:icon="@android:drawable/ic_menu_sort_alphabetically"  
                  android:title="@string/action_first_name_az"  
                   />  
                  
            <item android:id="@+id/action_last_name_za"  
                  android:icon="@android:drawable/ic_menu_sort_by_size"  
                  android:title="@string/action_last_name_za"
                   />  
            <item android:id="@+id/action_first_name_za"  
                  android:icon="@android:drawable/ic_menu_sort_by_size"  
                  android:title="@string/action_first_name_za"  
                  />  
        </menu> 
    </item>
    
    <item android:id="@+id/action_new"
          android:icon="@drawable/ic_action_new"
          android:title="@string/action_new"
         app:showAsAction="ifRoom" />
</menu>
